# bachelor-thesis

./: .gitignore  README.md  pyproject.toml  sandbox.ipynb
MAP/: __init__.py  map_tv_minimize.py  masks.py  test_fastmri_data.py  test_skimage_data.py
MMSE/: __init__.py  mmse_gibbs.py  mmse_mala.py  mmse_ula.py
Thesis/: thesis.tex
data/: load_knee_mri.py
notebooks/: datasetinfo.ipynb  fastmri_test.ipynb  gibbs_test.ipynb  mala_test.ipynb  map_test.ipynb  plots.ipynb  sandbox.ipynb  shepp_logan_test.ipynb  shepp_ula.ipynb  ula_test.ipynb  visualizer.ipynb
src/MAP/: map_tv_minimize.py  test_skimage_data.py
src/MMSE/: metropolis_hastings.py  mmse_mala.py  mmse_mala_new.py  mmse_ula.py
src/bach_thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: load_knee_mri.py
src/utilities/: masks.py
utilities/: masks.py  metrics.py
