[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bach_thesis"
version = "0.1.0"
authors = [
    { name = "Jan Kostanjsek", email = "jan.kostanjsek@student.tugraz.at" }
]
license = {text = "MIT"}
description = "Python script for various MRI reconstruction techniques (MAP vs. MMSE)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.4,<3.0.0",
    "numpy>=2.3.1,<3.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "fastmri>=0.3.0,<0.4.0",
    "torch>=2.7.1,<3.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
